settings.json valide

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
 	"public": {
-    	"email": "swapmysuitnoreply@gmail.com",
+    	"email": "swapmysuitnoreply@gmail.com"
     },
     "imgurLogin": "SwapMyStyle",
     "password" : "Swap2016suit",
