Désactivé les dates réservées a la fois dans la vue de modification et de location de vetement et empeché la possibilité de louer sans être connecté

--- a/config/settings.json
+++ b/config/settings.json
@@ -6,5 +6,5 @@
     "password" : "Swap2016suit",
     "imgurClientID": "978c711049778ca",
     "imgurClientSecret": "21019f3ffaf98daf72592f78feb85e3139cbda05",
-    "MAIL_URL": "smtp://swapmysuitnoreply%40gmail.com:Swap2016suit@smtp.gmail.com:587"
+    "MAIL_URL": "smtp://swapmysuitnoreply%40gmail.com:stjrglhmlcnixdns@smtp.gmail.com:587"    
 }
